Cambiar textos a variables de idioma

--- a/app/src/main/res/menu/definicion_menu.xml
+++ b/app/src/main/res/menu/definicion_menu.xml
@@ -3,10 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/opcion1"
-        android:title="Configuración"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/opcion2"
-        android:title="Nueva Asignatura"
+        android:title="@string/Config"
         app:showAsAction="never" />
 </menu>
