--- a/app/src/main/res/menu/definicion_menu.xml
+++ b/app/src/main/res/menu/definicion_menu.xml
@@ -5,4 +5,8 @@
         android:id="@+id/opcion1"
         android:title="@string/Config"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/opcion2"
+        android:title="@string/sign_out"
+        app:showAsAction="never" />
 </menu>
