--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,8 @@
         android:layout_marginTop="36dp"
         android:text="@string/log_in"
         android:background="@drawable/rounded_prim_button"
-        android:titleTextColor="?attr/colorOnPrimary"
+        android:backgroundTint="@null"
+        android:textColor="@color/colorOnPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +53,8 @@
         android:layout_marginTop="24dp"
         android:text="@string/sign_in"
         android:background="@drawable/rounded_sec_button"
-        android:titleTextColor="?attr/colorOnPrimary"
+        android:backgroundTint="@null"
+        android:textColor="@color/colorOnPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
