--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#2C3930</color>
     <color name="colorSecondary">#4C956C</color>
     <color name="colorOnPrimary">#DCD7C9</color>
+    <color name="white">#FFFFFF</color>
 </resources>
