--- a/app/src/main/res/menu/lasopciones.xml
+++ b/app/src/main/res/menu/lasopciones.xml
@@ -3,13 +3,13 @@
     <item
         android:id="@+id/nav_proyectos"
         android:icon="@drawable/workspaces_24px"
-        android:title="Proyectos" />
+        android:title="@string/Proyectos" />
     <item
         android:id="@+id/nav_ajustes"
         android:icon="@drawable/settings_24px"
-        android:title="Ajustes" />
+        android:title="@string/Config" />
     <item
         android:id="@+id/nav_logout"
         android:icon="@drawable/logout_24px"
-        android:title="Cerrar sesión" />
+        android:title="@string/sign_out" />
 </menu>
