Cambio de temas

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/sign_in"
-        android:background="@drawable/rounded_sec_button"
+        android:background="@drawable/rounded_prim_button"
         android:backgroundTint="@null"
         android:textColor="@color/colorOnPrimary"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +64,10 @@
         android:id="@+id/textView_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         android:text="@string/Log_Sign_in"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/etUsername"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
