--- a/app/src/main/res/layout/item_tarea.xml
+++ b/app/src/main/res/layout/item_tarea.xml
@@ -34,8 +34,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Título de la tarea"
+                android:textColor="@color/onSurface"
                 android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvDescripcion"
