--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2C3930</color>
+    <color name="colorPrimary">#023C40</color>
     <color name="colorSecondary">#4C956C</color>
     <color name="colorOnPrimary">#DCD7C9</color>
     <color name="white">#FFFFFF</color>
+    <color name="onSurface">#F8F4F9</color>
 </resources>
