--- a/app/src/main/res/menu/lasopciones.xml
+++ b/app/src/main/res/menu/lasopciones.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--
     <item
         android:id="@+id/nav_proyectos"
         android:icon="@drawable/workspaces_24px"
         android:title="@string/Proyectos" />
+     -->
     <item
-        android:id="@+id/nav_ajustes"
-        android:icon="@drawable/settings_24px"
-        android:title="@string/Config" />
+        android:id="@+id/nav_idioma"
+        android:icon="@drawable/translate_24px"
+        android:title="@string/idioma" />
     <item
         android:id="@+id/nav_logout"
         android:icon="@drawable/logout_24px"
