--- a/app/src/main/res/menu/lasopciones.xml
+++ b/app/src/main/res/menu/lasopciones.xml
@@ -14,4 +14,8 @@
         android:id="@+id/nav_logout"
         android:icon="@drawable/logout_24px"
         android:title="@string/sign_out" />
+    <item
+        android:id="@+id/nav_fecha"
+        android:icon="@drawable/calendar_month_24px"
+        android:title="@string/mostrar_fecha" />
 </menu>
