--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorOnPrimary">#DCD7C9</color>
     <color name="white">#FFFFFF</color>
     <color name="onSurface">#F8F4F9</color>
+    <color name="colorLlamativo">#9B4487</color>
 </resources>
