Añadir searchView a la toolbar. Añadir nombre de usuario en el panel de navegacion. Arreglo de tema en barra dispositivo

--- a/app/src/main/res/layout/activity_edit_tarea.xml
+++ b/app/src/main/res/layout/activity_edit_tarea.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:fitsSystemWindows="true">
 
     <EditText
         android:id="@+id/etTitulo"
@@ -52,6 +53,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:background="@drawable/rounded_prim_button"
+        android:backgroundTint="@null"
+        android:textColor="@color/colorOnPrimary"
         android:text="@string/agr_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
