--- a/app/src/main/res/layout/activity_nueva_tarea.xml
+++ b/app/src/main/res/layout/activity_nueva_tarea.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:fitsSystemWindows="true">
 
     <EditText
         android:id="@+id/etTitulo"
@@ -54,6 +55,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/agr_button"
+        android:background="@drawable/rounded_prim_button"
+        android:backgroundTint="@null"
+        android:textColor="@color/colorOnPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
