--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -37,6 +37,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
         android:text="@string/sign_in"
+        android:background="@drawable/rounded_prim_button"
+        android:backgroundTint="@null"
+        android:textColor="@color/colorOnPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
