--- a/app/src/main/res/menu/definicion_menu.xml
+++ b/app/src/main/res/menu/definicion_menu.xml
@@ -2,11 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/opcion1"
-        android:title="@string/Config"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/opcion2"
-        android:title="@string/sign_out"
-        app:showAsAction="never" />
+        android:id="@+id/action_search"
+        android:title="@string/search"
+        android:icon="@drawable/search_24px"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView" />
+
 </menu>
