--- a/app/src/main/res/layout/activity_nueva_tarea.xml
+++ b/app/src/main/res/layout/activity_nueva_tarea.xml
@@ -8,6 +8,20 @@
     android:padding="16dp"
     android:fitsSystemWindows="true">
 
+    <TextView
+        android:id="@+id/textView_login3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="monospace"
+        android:text="@string/Añadir_nueva_ta"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/etTitulo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/etTitulo"
         android:layout_width="263dp"
