La imagen del perfil es pulsable

--- a/app/src/main/res/layout/lacabecera.xml
+++ b/app/src/main/res/layout/lacabecera.xml
@@ -9,6 +9,7 @@
     android:background="@color/colorPrimary">
 
     <ImageView
+        android:id="@+id/mi_perfil"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:src="@drawable/account_circle_24px"
