--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorOnPrimary">#598381</color>
     <color name="onSurface">#04030F</color>
     <color name="colorLlamativo">#0A014F</color>
+    <color name="colorSurface">#D6EFFF</color>
 </resources>
