--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,4 +7,14 @@
         <item name="colorOnPrimary">@color/colorOnPrimary</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
+    <style name="MaterialAlertDialog.Proyecto" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
+        <item name="colorSurface">@color/white</item>
+        <item name="cornerSize">16dp</item>
+    </style>
+    <style name="ButtonStyle.Proyecto" parent="Widget.AppCompat.Button">
+        <item name="android:backgroundTint">@color/colorPrimary</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:radius">16dp</item>
+        <item name="android:padding">10dp</item>
+    </style>
 </resources>
