--- a/app/src/main/res/layout/widget_task.xml
+++ b/app/src/main/res/layout/widget_task.xml
@@ -14,6 +14,18 @@
         android:text="@string/no_tareas"
         android:textSize="16sp"
         android:textColor="@color/onSurface"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:padding="4dp" />
+
+    <TextView
+        android:id="@+id/textViewFecha"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="14sp"
+        android:textColor="@color/colorLlamativo"
+        android:paddingStart="4dp"
+        android:paddingTop="2dp"/>
 
 </LinearLayout>
